# stl

./: README.md  lexer.hs  main.stl  stl.cabal
src/: stl.hs
src/Language/STL/: Lex.hs  Parse.hs
src/Language/STL/Lex/: Normalize.hs
