name:                stl
version:             0.1.0.0
synopsis:            A 100% async language
homepage:            https://github.com/joelteon/stl.git
license:             MIT
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable stl
  main-is:             stl.hs
  other-modules:       Language.STL
                       Language.STL.Lex
                       Language.STL.Lex.Normalize
                       Language.STL.Parse
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , lens
                     , parsec
                     , text
                     , transformers
                     , trifecta
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
